# Gothic-Script-Analyzer

./: .gitignore  CMakeLists.txt  README.md
cmake/: addToBinDir.cmake  searchDependencies.cmake  variables.cmake
dependencies/: build-common.bat  build-common.sh  build-dependencies.bat  build-dependencies.sh  build-gmock.sh
include/gsa/: SystemParameters.h
src/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_FileParser.cpp  test_Module_AIOutput.cpp
src/tests/resources/: AIOutputModule.d  FileParser_LineBased.d
